<resources>
    <string name="app_name">Masluli</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="routeName">Route Name is...</string>
    <string name="routeLocation">Location?</string>
    <string name="routeLength">Length in KM</string>
    <string name="routeDiffLvl">Difficulty level is...</string>
    <string name="routeDescription">How was your Maslul?</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login"><u>Let`s travel!</u></string>
    <string name="moveToRegister">Not register yet? <u>Come travel with us</u></string>
    <string name="name">Full name</string>
    <string name="age">Age</string>
    <string name="area">Where am I from</string>
    <string name="registerPage">Join Masluli</string>
    <string name="register"><u>Let`s start to travel!</u></string>
    <string name="profilePage">My profile</string>
    <string name="save">Save</string>
    <string name="signout">Sign out</string>
    <string name="myMaslulim">My Maslulim</string>
    <string name="routeRating">Rate this maslul</string>
    <string name="routeImage">Maslul image</string>
    <string-array name="locations_array">
        <item>South</item>
        <item>East</item>
        <item>West</item>
        <item>North</item>
    </string-array>
    <string-array name="difficulties_array">
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
    </string-array>
</resources>
