<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddMaslulFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/add_maslul_name_et"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="@string/routeName"
            android:textColorHint="@color/masluli_green"
            app:boxBackgroundColor="@color/masluli_cards"
            app:boxStrokeColor="@color/masluli_green"
            app:boxStrokeWidth="0dp"
            app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Full">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textShortMessage"
                android:textColorHint="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/add_maslul_location_et"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="@string/routeLocation"
            android:textColorHint="@color/masluli_green"
            app:boxBackgroundColor="@color/masluli_cards"
            app:boxStrokeColor="@color/masluli_green"
            app:boxStrokeWidth="0dp"
            app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Full">

            <AutoCompleteTextView
                android:id="@+id/add_path_location_ac"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/add_maslul_length_et"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="@string/routeLength"
                android:textColorHint="@color/masluli_green"
                app:boxBackgroundColor="@color/masluli_cards"
                app:boxStrokeColor="@color/masluli_green"
                app:boxStrokeWidth="0dp"
                app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Full">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textShortMessage"
                    android:textColorHint="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/add_maslul_diff_lvl_et"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="@string/routeDiffLvl"
                android:textColorHint="@color/masluli_green"
                app:boxBackgroundColor="@color/masluli_cards"
                app:boxBackgroundMode="outline"
                app:boxStrokeColor="@color/masluli_green"
                app:boxStrokeWidth="0dp"
                app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Full">

                <AutoCompleteTextView
                    android:id="@+id/add_path_diff_lvl_ac"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="none" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center|center_vertical"
            android:orientation="horizontal">

            <ToggleButton
                android:id="@+id/add_maslul_accessible_toggle_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/masluli_cards"
                android:isScrollContainer="false"
                android:text="Accessible"
                android:textColor="@color/masluli_green"
                android:textColorLink="@color/masluli_green"
                android:textOff="Not Accessible"
                android:textOn="Accessible" />

            <ToggleButton
                android:id="@+id/add_maslul_water_toggle_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/masluli_cards"
                android:text="Water"
                android:textColor="@color/masluli_green"
                android:textColorLink="@color/masluli_green"
                android:textOff="No water"
                android:textOn="Water" />

            <ToggleButton
                android:id="@+id/add_maslul_round_toggle_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/masluli_cards"
                android:text="Rounded"
                android:textColor="@color/masluli_green"
                android:textColorLink="@color/masluli_green"
                android:textOff="Not rounded"
                android:textOn="Rounded" />
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/add_maslul_description_et"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="@string/routeDescription"
            android:textColorHint="@color/masluli_green"
            app:boxBackgroundColor="@color/masluli_cards"
            app:boxStrokeColor="@color/masluli_green"
            app:boxStrokeWidth="0dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="325dp"
                android:elegantTextHeight="false"
                android:inputType="textLongMessage"
                android:textColorHint="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Rate the maslul"
                android:textColor="@color/masluli_green"
                android:textSize="18sp" />

            <RatingBar
                android:id="@+id/add_maslul_rating_bar"
                style="@style/RatingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"
                android:rating="4"
                android:stepSize="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="28dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Add Image"
                android:textColor="@color/masluli_green"
                android:textSize="18sp" />

            <ImageButton
                android:id="@+id/add_maslul_photo_btn"
                android:layout_width="34dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@android:drawable/ic_menu_add" />

        </LinearLayout>

        <Button
            android:id="@+id/add_maslul_add_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Submit" />

    </LinearLayout>
</ScrollView>